--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-45971428-1', 'j0ecool.github.io');
+  ga('create', 'UA-45971428-1', 'keylan118.github.io');
   ga('send', 'pageview');
 
 </script>
